--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Enums\Changes\Fields\OtherField.cs" />
     <Compile Include="Enums\Changes\Fields\RegistrationField.cs" />
     <Compile Include="Enums\Contracts\ContractFieldLabels.cs" />
+    <Compile Include="Enums\FileViewLogs\FileViewLogSortFields.cs" />
     <Compile Include="Enums\Inventory\CurrentModes.cs" />
     <Compile Include="Enums\Inventory\Fields\Computer\CommunicationFields.cs" />
     <Compile Include="Enums\Inventory\Fields\Computer\ContactFields.cs" />
@@ -331,6 +332,8 @@
     <Compile Include="Models\Feedback\FeedbackQuestionOption.cs" />
     <Compile Include="Models\Feedback\FeedbackQuestionOverview.cs" />
     <Compile Include="Models\FileContentModel.cs" />
+    <Compile Include="Models\FileViewLog\FileViewLogListFilter.cs" />
+    <Compile Include="Models\FileViewLog\FileViewLogListItemModel.cs" />
     <Compile Include="Models\FileViewLog\FileViewLogModel.cs" />
     <Compile Include="Models\FinishingCause\FinishingCauseItem.cs" />
     <Compile Include="Models\Gdpr\DataPrivacyParameters.cs" />
