--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -413,6 +413,8 @@
     <Compile Include="Models\Case\InvoiceTimeModel.cs" />
     <Compile Include="Models\Contract\ContractHistoryFieldsDiff.cs" />
     <Compile Include="Models\Contract\ContractsSearchInputData.cs" />
+    <Compile Include="Models\FileViewLogs\FileViewLogItemViewModel.cs" />
+    <Compile Include="Models\FileViewLogs\FileViewLogsViewModel.cs" />
     <Compile Include="Models\Gdpr\DataPrivacyHistoryViewModel.cs" />
     <Compile Include="Models\Gdpr\GdprOperationsHistoryListItem.cs" />
     <Compile Include="Models\JsonModels\Base\BaseJsonModel.cs" />
@@ -450,6 +452,7 @@
     <Compile Include="Areas\Invoices\Models\LogInvoiceItemViewModel.cs" />
     <Content Include="Areas\Admin\Content\js\CaseType\_input.js" />
     <Content Include="Areas\Admin\Content\js\DataPrivacy\_dataPrivacyForm.js" />
+    <Content Include="Areas\Admin\Content\js\FileViewLog\fileViewLogForm.js" />
     <Content Include="Areas\Inventory\Content\js\relatedCases.js" />
     <Content Include="Areas\Admin\Content\js\OrderType\index.logic.js" />
     <Content Include="Areas\Admin\Content\js\QuickLinks\index.logic.js" />
@@ -3446,6 +3449,8 @@
     <Content Include="Areas\Admin\Views\CustomerAdvancedSearch\_CaseSummaryPartialView.cshtml" />
     <Content Include="Areas\Reports\Views\Report\ReportViewer\_JsReport.cshtml" />
     <Content Include="Areas\Admin\Views\Users\EditorTemplates\CustomerUser.cshtml" />
+    <Content Include="Areas\Admin\Views\GlobalSetting\_FilesViewLog.cshtml" />
+    <Content Include="Areas\Admin\Views\GlobalSetting\_FileViewLogTable.cshtml" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="ReportViewerWebForm.aspx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
