--- a/dhHelpdeskNG/DH.Helpdesk.TaskScheduler.Console/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.TaskScheduler.Console/App.config
@@ -15,13 +15,13 @@
     <add key="EnvName" value="Dev" />
     <add key="LogPath" value="C:\InitiatorsLogs" />
     <add key="DailyReport" value="0" />
-    <add key="InitiatorImport" value="1" />
-    <add key="GDPRTasks" value="0" />
+    <add key="InitiatorImport" value="0" />
+    <add key="GDPRTasks" value="1" />
     <add key="GDPRBatchSize" value="1000" />
   </appSettings>
   <connectionStrings>
     <!-- Dev -->
-    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=(local);Initial Catalog=DH_Support;uid=helpdesk;Password=;MultipleActiveResultSets=True;Connection Lifetime=3;" providerName="System.Data.SqlClient" /> 
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Build;uid=helpdesk-build;Password=helpdesk-build;MultipleActiveResultSets=True;Connection Lifetime=3;" providerName="System.Data.SqlClient" /> 
     <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=localhost;Initial Catalog=DH_Support;Password=Asd123!;User ID=devUser;MultipleActiveResultSets=True;Connection Lifetime=3;" providerName="System.Data.SqlClient" />-->
     <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
