--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Computers\ComputerInventory.cs" />
     <Compile Include="Computers\ComputerLog.cs" />
     <Compile Include="Computers\ComputerModel.cs" />
+    <Compile Include="Computers\ComputerStatus.cs" />
     <Compile Include="Computers\ComputerType.cs" />
     <Compile Include="CaseSource.cs" />
     <Compile Include="CaseIsAbout.cs" />
