#76241 - Attachment on internal lognote with paperclip - fixed linked file from case files

--- a/dhHelpdeskNG/DH.Helpdesk.EmailEngine.Console/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.EmailEngine.Console/App.config
@@ -10,7 +10,7 @@
   </startup>
   <connectionStrings>
     <!-- Dev -->
-    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL3;Initial Catalog=dhHelpdeskNG_Acct;Password=kgk277;User ID=dhHelpdeskNG_Test_DH;Persist Security Info=True;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=(local);Initial Catalog=DH_Support;User Id=helpdesk;Password=;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="Delay" value="60" />
