[Fix] #76271 bug when case template reported by is null (logical fix)

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/manifest.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "Helpdesk",
-  "short_name": "Helpdesk",
+  "name": "DH Helpdesk",
+  "short_name": "DH Helpdesk",
   "theme_color": "#fff",
   "background_color": "#fff",
   "display": "standalone",
-  "scope": "/",
+  "scope": "/mobile/",
   "start_url": "/",
   "icons": [
     {
