--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
@@ -26,6 +26,7 @@
   </appSettings>
   <connectionStrings>
     <add name="Helpdesk" connectionString="Data Source=DHUTVSQL6; Initial Catalog=Helpdesk-Dev; User Id=helpdesk-dev; Password=helpdesk-dev;Network Library=dbmssocn" />
+    <!--<add name="Helpdesk" connectionString="Data Source=(local);Initial Catalog=DH_Support;User Id=helpdesk;Password=;Network Library=dbmssocn;" />-->
   </connectionStrings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
