#77347 - Support several customers on Case Overview #77344 - Support several customers on Start page

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
@@ -192,6 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
+    <Compile Include="Controllers\CaseFavoritesController.cs" />
     <Compile Include="Controllers\CaseLogFilesController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Infrastructure\Owin\LogRequestMiddleware.cs" />
