--- a/dhHelpdeskNG/DH.Helpdesk.Schedule/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Schedule/app.config
@@ -16,7 +16,8 @@
     <add key="SecureConnectionString" value="true" />
   </appSettings>
   <connectionStrings>
-      <add name="Helpdesk" connectionString="Data Source=DHUTVSQL2; Initial Catalog=DH_Support; User Id=sa; Password=;Network Library=dbmssocn" />
+    <add name="Helpdesk" connectionString="Data Source=DHUTVSQL6; Initial Catalog=Helpdesk-Dev; User Id=helpdesk-dev; Password=helpdesk-dev;Network Library=dbmssocn" />
+    <!--<add name="Helpdesk" connectionString="Data Source=(local);Initial Catalog=DH_Support;User Id=helpdesk;Password=;Network Library=dbmssocn;" />-->
   </connectionStrings>
   <system.diagnostics>
     <sources>
