--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/lib/mobiscroll-package/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/lib/mobiscroll-package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mobiscroll/angular",
-  "version": "4.7.3",
+  "version": "4.8.3",
   "description": "Angular UI library for progressive web and hybrid apps",
   "homepage": "https://mobiscroll.com/",
   "license": "Apache-2.0",
@@ -24,12 +24,13 @@
     "url": "https://github.com/acidb/mobiscroll/issues"
   },
   "main": "dist/js/mobiscroll.angular.min.js",
-  "module": "dist/js/mobiscroll.angular.min.js",
+  "module": "dist/esm5/mobiscroll.angular.min.js",
   "types": "dist/js/mobiscroll.angular.min.d.ts",
   "style": "dist/css/mobiscroll.angular.min.css",
   "files": [
-    "dist/js/**",
     "dist/css/**",
+    "dist/esm5/**",
+    "dist/js/**",
     "dist/src/**"
   ],
   "peerDependencies": {
