--- a/dhHelpdeskNG/dhHelpdesk_NG.Common/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Common/packages.config
@@ -3,4 +3,5 @@
   <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="PostSharp" version="4.0.38" targetFramework="net452" />
+  <package id="YamlDotNet" version="8.0.0" targetFramework="net452" />
 </packages>
