--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -36,6 +36,7 @@
         "luxon": "^1.17.2",
         "ng2-file-upload": "^1.3.0",
         "ng2-pdf-viewer": "^5.3.3",
+        "ngx-pinch-zoom": "^2.3.4",
         "ngx-take-until-destroy": "^5.4.0",
         "rxjs": "^6.5.3",
         "rxjs-compat": "^6.5.2",
