#78670 New CaseBinding: Placement

--- a/ExtendedCase/ExtendedCase.WebApi/Web.config
+++ b/ExtendedCase/ExtendedCase.WebApi/Web.config
@@ -10,7 +10,10 @@
   </configSections>
   
   <connectionStrings>
+    <!--Dev-->
     <add name="HelpdeskDb" connectionString="Data Source=(local);Initial Catalog=DH_Support;User Id=helpdesk;Password=;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <!--DHUTVSQL6-->
+    <!--<add name="HelpdeskDb" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
 
   <appSettings>   
