Fixed bug in case overview for mobile (my restricted cases)

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/manifest.json.template
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/manifest.json.template
@@ -5,7 +5,7 @@
   "background_color": "#fff",
   "display": "standalone",
   "scope": "#{Scope}",
-  "start_url": "/",
+  "start_url": "#{SubsiteUrl}",
   "icons": [
     {
       "src": "#{icon72}",
