#77345 - sorted templates list

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config
@@ -27,6 +27,8 @@
   
      <!--dhutvsql6--> 
     <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>-->
+    <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Acc;User Id=helpdesk-acc;Password=helpdesk-acc;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
+
   </connectionStrings>
   
   <system.web>
