--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -194,12 +194,17 @@
     <Compile Include="Models\Case\CaseLock\CaseLockInfo.cs" />
     <Compile Include="Models\Case\CaseLogfileDto.cs" />
     <Compile Include="Models\Case\CaseLogs\CaseLog.cs" />
+    <Compile Include="Models\Case\CaseOverview\ExtendedCaseOverview.cs" />
     <Compile Include="Models\Case\CaseSectionInfo.cs" />
+    <Compile Include="Models\Case\CaseSettingsOverview\ExtendedCaseSettings.cs" />
     <Compile Include="Models\Case\CaseSolutionConditionOverview.cs" />
     <Compile Include="Models\Case\CaseSolutionInfo.cs" />
     <Compile Include="Models\Case\CaseSolutionOverview.cs" />
     <Compile Include="Models\Case\CaseTemplateData.cs" />
     <Compile Include="Models\Case\ExtendedCaseDataOverview.cs" />
+    <Compile Include="Models\Case\ExtendedCaseFormFieldTranslationModel.cs" />
+    <Compile Include="Models\Case\ExtendedCaseReportFieldModel.cs" />
+    <Compile Include="Models\Case\ExtendedCaseReportModel.cs" />
     <Compile Include="Models\Case\LogFileContent.cs" />
     <Compile Include="Models\Case\Output\CustomerCasesStatus.cs" />
     <Compile Include="Models\Case\Output\CustomerUserCase.cs" />
