--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -174,6 +174,9 @@
     <Compile Include="ExtendedCaseEntity\CaseSolution_CaseSection_ExtendedCaseForm.cs" />
     <Compile Include="ExtendedCaseEntity\Case_CaseSection_ExtendedCase.cs" />
     <Compile Include="ExtendedCaseEntity\Case_ExtendedCaseEntity.cs" />
+    <Compile Include="ExtendedCaseEntity\ExtendedCaseReport.cs" />
+    <Compile Include="ExtendedCaseEntity\ExtendedCaseReportField.cs" />
+    <Compile Include="ExtendedCaseEntity\ExtendedCaseTranslation.cs" />
     <Compile Include="ExtendedCaseEntity\ExtendedCaseValue.cs" />
     <Compile Include="ExtendedCaseEntity\ExtendedCaseData.cs" />
     <Compile Include="ExtendedCaseEntity\ExtendedCaseForm.cs" />
