--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -357,9 +357,13 @@
     <Compile Include="Areas\Inventory\Models\RelatedCasesModel.cs" />
     <Compile Include="Areas\Inventory\Models\RelatedCasesModels\ServerRelatedCasesModel.cs" />
     <Compile Include="Areas\Reports\Models\ReportService\CommonReportFilterModel.cs" />
+    <Compile Include="Areas\Reports\Models\ReportService\ExtendedCaseFormFieldTranslationModel.cs" />
+    <Compile Include="Areas\Reports\Models\ReportService\ExtendedCaseFormModel.cs" />
     <Compile Include="Areas\Reports\Models\ReportService\HistoricalReportFilterModel.cs" />
     <Compile Include="Areas\Reports\Models\ReportService\NumberOfCasesReportFilterModel.cs" />
     <Compile Include="Areas\Reports\Models\ReportService\ReportedTimeReportFilterModel.cs" />
+    <Compile Include="Areas\Reports\Models\Reports\ReportDefinition.cs" />
+    <Compile Include="Areas\Reports\Models\Reports\ReportGenerator\ExtendedCaseFormFieldsModel.cs" />
     <Compile Include="Areas\WebApi\Controllers\CaseApiController.cs" />
     <Compile Include="Components\Contracts\ContractHistoryFormatter.cs" />
     <Compile Include="Components\Contracts\ContractHistoryMarkupBuilder.cs" />
@@ -3459,6 +3463,7 @@
     <Content Include="Areas\Admin\Views\Users\EditorTemplates\CustomerUser.cshtml" />
     <Content Include="Areas\Admin\Views\GlobalSetting\_FilesViewLog.cshtml" />
     <Content Include="Areas\Admin\Views\GlobalSetting\_FileViewLogTable.cshtml" />
+    <Content Include="Areas\Reports\Views\Report\ReportViewer\_ExtendedCaseFormFields.cshtml" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="ReportViewerWebForm.aspx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -4973,7 +4978,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>63226</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:63220/</IISUrl>
+          <IISUrl>http://localhost:63222/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
