--- a/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Collections\INamedObject.cs" />
     <Compile Include="Collections\NamedObjectCollection.cs" />
     <Compile Include="Configuration\AppConfigHelper.cs" />
+    <Compile Include="Constants\CasePaths.cs" />
     <Compile Include="Constants\CaseSearchConstants.cs" />
     <Compile Include="Constants\CaseSections.cs" />
     <Compile Include="Constants\CaseType.cs" />
