--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -370,6 +370,7 @@
     <Compile Include="Controllers\CasesController_Files.cs" />
     <Compile Include="Controllers\CasesController_MobileRoute.cs" />
     <Compile Include="Controllers\FileAccessController.cs" />
+    <Compile Include="Controllers\StatisticsController.cs" />
     <Compile Include="Infrastructure\Authentication\Behaviors\MixedModeAuthenticationBehavior.cs" />
     <Compile Include="Infrastructure\Authentication\Behaviors\PrincipalExtensions.cs" />
     <Compile Include="Infrastructure\Behaviors\AdvancedSearchBehavior.cs" />
@@ -4865,6 +4866,7 @@
     <Folder Include="Views\CasesController_MobileRoute\" />
     <Folder Include="Views\LogAccess\" />
     <Folder Include="Views\Password\" />
+    <Folder Include="Views\Statistics\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Login\Login.cshtml" />
