--- a/dhHelpdeskNG/DH.Helpdesk.EmailEngine.Library/DH.Helpdesk.EmailEngine.Library.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.EmailEngine.Library/DH.Helpdesk.EmailEngine.Library.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DH.Helpdesk.EmailEngine.Library</RootNamespace>
     <AssemblyName>DH.Helpdesk.EmailEngine.Library</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
