--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
@@ -101,6 +101,11 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="MiniProfiler" path="mini-profiler-resources/*" verb="*" type="System.Web.Routing.UrlRoutingModule" resourceType="Unspecified" preCondition="integratedMode" />
     </handlers>
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="sameorigin" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
