--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
@@ -22,7 +22,7 @@
   #{if IsFormLibConfigurable}
   <formLibConfigurable>
     <accessManagment>
-      <api uriPath="http://dhhelpdesk-ikea-bschr-am-dataadminb.datahalland.se/" username="OperatorTest1" password="asd123!" />
+      <api uriPath="#{AMUrl}" username="#{AmUsers}" password="#{AmPassword}" />
       <countries>
         <country helpdeskCustomerId="1" employeePrefix="00" code="GL" />
         <country helpdeskCustomerId="28" employeePrefix="00" code="GL" />
@@ -33,17 +33,13 @@
     </accessManagment>
   </formLibConfigurable>
   #{/if}
-  <!-- test ignore again, ignore-->
   <connectionStrings>
-    <!--  <add name="DSN" connectionString="Password=;Persist Security Info=True;User ID=SA;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=dhutvsql1;MultipleActiveResultSets=True" /> -->
-    <add name="DSN_AM" connectionString="Data Source=dhutvsql2;Initial Catalog=AccessManagementDBDataAdminB;User ID=sa;Password=;" providerName="System.Data.SqlClient" />
-
+     <add name="DSN_AM" connectionString="Data Source=#{AmDatabaseServer};Initial Catalog=#{AmDatabaseName};User ID=#{AmDatabaseUser};Password=#{AmDatabaseServer};" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="LoginMode" value="Windows" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--<add key="dh_filesDirectory" value="\\dhutvas2\wwwroot\DH_Arendehantering\Documents" />-->
     <add key="dh_filesDirectory" value="#{FilesDirectory}" />
     <add key="dh_selfserviceaddress" value="#{SelfserviceAddress}" />
     <add key="dh_helpdeskaddress" value="#{HelpdeskAddress}" />
@@ -51,11 +47,11 @@
     <!-- For self/service line manager -->
     <add key="InitFromSelfService" value="#{InitFromSelfService}" />
     <add key="InitFromSelfServiceWorkflowInitValue" value="#{InitFromSelfServiceWorkflowInitValue}" />
-  <!-- TODO: Parameters   <add key="ida:FederationMetadataLocation" value="https://fs.dhsolutions.se/federationmetadata/2007-06/federationmetadata.xml" />
-    <add key="ida:Issuer" value="https://fs.dhsolutions.se/adfs/ls/" />
-    <add key="ida:ProviderSelection" value="productionSTS" />
-    <add key="SmtpServer" value="smtp.datahalland.se" />
-    <add key="SmtpPort" value="25" />-->
+  <!-- TODO: Parameters   <add key="ida:FederationMetadataLocation" value="#{AdfsFederationMetaDataLocation}" />
+    <add key="ida:Issuer" value="#{AdfsIssuerUrl}" />
+    <add key="ida:ProviderSelection" value="#{AdfsProviderSection}" />
+    <add key="SmtpServer" value="#{SmptServer}" />
+    <add key="SmtpPort" value="#{SmptPort"}" />-->
 
     <add key="CaseList" value="manager,coworkers" />
     <add key="CurrentApplication" value="SelfService" />
@@ -78,16 +74,15 @@
     <add key="ClaimEmail" value="emailaddress" />
     <add key="SSOLog" value="true" />
     <add key="DefaultEmployeeNumber" value="" />
-    <add key="LogoutUrl" value="https://fed.apps.ikeadt.com/adfs/ls/?wa=wsignout1.0" />
+    <add key="LogoutUrl" value="#{AdfsLogoutUrl}" />
     #{/if}
     
     #{if IsAccessManagementConfigurable}
     <!-- TODO: -->
     <!-- Access Management API Keis-->
-    <add key="AM_Api_UriPath" value="http://dhhelpdesk-ikea-bschr-am-dataadminb.datahalland.se/" />
-    <!--<add key="AM_Api_UriPath"  value="http://ptam-portal.ikeadt.com/" />-->
-    <add key="AM_Api_UserName" value="OperatorTest1" />
-    <add key="AM_Api_Password" value="asd123!" />
+    <add key="AM_Api_UriPath" value="#{AmApiUri}" />
+    <add key="AM_Api_UserName" value="#{AmApiUserName}" />
+    <add key="AM_Api_Password" value="#{AmApiPassword}" />
 
     #{/if}
   </appSettings>
@@ -261,15 +256,15 @@
   <system.identityModel>
     <identityConfiguration>
       <audienceUris>
-        <add value="http://dhhelpdesk-dh-test/selfservice/" />
+        <add value="#{SSOAdudienceUri}" />
       </audienceUris>
       <issuerNameRegistry type="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry, System.IdentityModel.Tokens.ValidatingIssuerNameRegistry">
-        <authority name="http://fs.dhsolutions.se/adfs/services/trust">
+        <authority name="#{SSOIssuerTrust}">
           <keys>
-            <add thumbprint="2118731BB6FFE60C3B814EA2ED31F006B3A64CCA" />
+            <add thumbprint="#{SSOIssuerTumbprint}" />
           </keys>
           <validIssuers>
-            <add name="http://fs.dhsolutions.se/adfs/services/trust" />
+            <add name="#{SSOIssuerTrust}" />
           </validIssuers>
         </authority>
       </issuerNameRegistry>
@@ -280,7 +275,7 @@
   <system.identityModel.services>
     <federationConfiguration>
       <cookieHandler requireSsl="false" />
-      <wsFederation passiveRedirectEnabled="true" issuer="https://fs.dhsolutions.se/adfs/ls/" realm="http://dhhelpdesk-dh-test/selfservice/" requireHttps="false" />
+      <wsFederation passiveRedirectEnabled="true" issuer="#{AdfsIssuer}" realm="#{AdfsIssuerRealm}" requireHttps="#{AdfsRequireHttps}" />
     </federationConfiguration>
   </system.identityModel.services>
   #{/if}
