#79535 Added Admin UI for file restriction, support for Case and log uploads, m2t, selfservice.
Todo: Log notes on self service, mobile web, other uploads such as order, invoice, inventory, translations, database script, DH+?, list of defaults and button to restore them in admin UI, better UI in admin? user manual?

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -341,6 +341,7 @@
     <Compile Include="Areas\Admin\Controllers\GDPRProgressController.cs" />
     <Compile Include="Areas\Admin\Controllers\ExtendedCaseController.cs" />
     <Compile Include="Areas\Admin\Infrastructure\Mappers\CustomerUserEntityToModelMapper.cs" />
+    <Compile Include="Areas\Admin\Models\FileUploadExtensionsModel.cs" />
     <Compile Include="Areas\Admin\Models\StateSelectListItem.cs" />
     <Compile Include="Areas\Inventory\Controllers\InventoryController.cs" />
     <Compile Include="Areas\Inventory\Infrastucture\Extensions\TabSettingExtensions.cs" />
@@ -3524,6 +3525,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\Chart.js" />
     <Content Include="Scripts\Chart.min.js" />
+    <Content Include="Areas\Admin\Views\GlobalSetting\EditFileExtensions.cshtml" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="Scripts\i18n\ar.js" />
     <Content Include="Scripts\i18n\az.js" />
