--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -59,7 +59,7 @@
   <connectionStrings>
     <add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />
     <!--dev-->
-    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Build;User Id=helpdesk-build;Password=helpdesk-build;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
     <!--dhutvsql6-->
     <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL6;Initial Catalog=Helpdesk-Dev;User Id=helpdesk-dev;Password=helpdesk-dev;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>-->
     <!-- <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123" providerName="System.Data.OleDb" />
