#79535 Fixes for most file uploads, some remain, some work needs to be done in admin (better confirmation dialogs). OBS! Big commit

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
@@ -24,11 +24,7 @@
     <accessManagment>
       <api uriPath="#{AMUrl}" username="#{AmUsers}" password="#{AmPassword}" />
       <countries>
-        <country helpdeskCustomerId="1" employeePrefix="00" code="GL" />
-        <country helpdeskCustomerId="28" employeePrefix="00" code="GL" />
-        <country helpdeskCustomerId="29" employeePrefix="05" code="NL" />
-        <country helpdeskCustomerId="30" employeePrefix="08" code="UK" />
-        <country helpdeskCustomerId="31" employeePrefix="11" code="IE" />
+        <country helpdeskCustomerId="1" employeePrefix="00" code="SV" />
       </countries>
     </accessManagment>
   </formLibConfigurable>
